# Emulsification-Simulator

./: .gitignore  CHANGELOG.md  CLAUDE.md  DESIGN.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: default.toml  fast_smoke.toml  stirred_vessel.toml
data/: properties.toml
data/validation/: README.md
data/validation/l1_dsd/: schema.json
data/validation/md/: example_martini_cellulose.json
docs/: 01_scientific_advisor_report.md  02_computational_architecture.md  03_scientific_review.md  04_calibration_protocol.md  05_independent_scientific_audit_2026-04-10.md  05_trust_warning_resolution_plan.md  06_executable_implementation_plan.md  06_implementation_protocols.md  06_scientific_model_redesign_and_fix_plan_2026-04-10.md  07_ui_update_plan.md  08_audit_report_2026-04-11.md  09_audit_remediation_plan.md  10_future_development_roadmap.md  11_module2_module3_system_design.md  12_module2_module3_design_audit_2026-04-11.md  13_module2_module3_final_implementation_plan.md  14_ui_full_alignment_plan.md  15_m2_expansion_workplan.md  15_ui_full_alignment_plan_audit_2026-04-11.md  16_ui_final_implementation_plan.md  17_m2_expansion_workplan_audit_2026-04-12.md  18_m2_expansion_final_plan.md  19_ligand_protein_coupling_candidates.md  20_linker_arm_candidates.md  21_m2_candidates_integration_plan.md  22_m2_detailed_integration_plan.md  23_m2_candidate_integration_plan_audit_2026-04-12.md  24_m2_final_integration_plan.md  25_v58_deferred_smpeg_plan.md  26_v58_deferred_smpeg_plan_audit_2026-04-12.md  27_v58_final_plan.md  28_v59_plan.md  29_v59_plan_audit_2026-04-12.md  30_v59_final_plan.md  31_v60_plan.md  32_v60_plan_audit_2026-04-12.md  33_v60_final_plan.md  34_architecture_review_consensus_plan.md  35_architecture_modification_plan_2026-04-17.md  INDEX.md  (+15 more)
docs/decisions/: ADR-001-python-version-policy.md  ADR-002-optimization-stack-pin.md
docs/user_manual/: appendix_J_functionalization_protocols.md  build_pdf.py  polysaccharide_microsphere_simulator_first_edition.md
handover/v9/: FINAL_HANDOVER.md  M0_preflight.md  MIDPOINT_HANDOVER.md  MODULE_REGISTRY.md  S1_checkpoint.md  S2_checkpoint.md
installer/: EmulSim.iss  LICENSE_AND_IP.txt  README.md  build_installer.bat
installer/templates/: INSTALL.md  README.txt  RELEASE_NOTES.md  WHERE_ARE_THE_PROGRAM_FILES.txt  install.bat  launch_cli.bat  launch_ui.bat  uninstall.bat
skills/: claude_chat_skill_package.md
src/emulsim/: __init__.py  __main__.py  assay_record.py  config.py  datatypes.py  literature_constants.py  md_ingest.py  process_dossier.py  reagent_library.py  reagent_library_alginate.py  trust.py  uncertainty.py  uncertainty_core.py  uncertainty_unified.py
src/emulsim/calibration/: __init__.py  calibration_data.py  calibration_store.py  fitters.py
src/emulsim/digital_twin/: __init__.py  enkf.py  replay.py  schema.py
src/emulsim/level1_emulsification/: __init__.py  energy.py  kernels.py  solver.py  thermal.py  validation.py
src/emulsim/level2_gelation/: __init__.py  free_energy.py  gelation.py  ionic_ca.py  nips_cellulose.py  pore_analysis.py  solvent_evaporation.py  solver.py  spatial.py  ternary_free_energy.py  ternary_solver.py
src/emulsim/level3_crosslinking/: __init__.py  solver.py
tests/: conftest.py  test_alginate_ionic_ca.py  test_alginate_l4_and_pipeline.py  test_alginate_phase2c.py  test_assay_record.py  test_batch_variability.py  test_cellulose_nips_phase1.py  test_cellulose_phase2_phase3.py  test_cli_v7.py  test_cooling_rate_derivation.py  test_crosslinker_derivation.py  test_data_layer.py  test_digital_twin.py  test_edc_nhs_kinetics.py  test_evidence_tier.py  test_f4b_cvar.py  test_gradient_lrm.py  test_internal_gelation.py  test_inverse_design_engine.py  test_inverse_design_objectives.py  test_kernels_jit.py  test_l1_trends.py  test_level1_emulsification.py  test_level2_gelation.py  test_level3_crosslinking.py  test_level4_mechanical.py  test_md_ingest.py  test_mechanism_data.py  test_module2_acs.py  test_module2_workflows.py  test_module3_breakthrough.py  test_module3_catalysis.py  test_module3_multicomponent.py  test_optimization.py  test_optimization_smoke.py  test_parallel_mc.py  test_phosphoramide_upgrade.py  test_physics_layer.py  test_plga_phase1.py  test_plga_phase2.py  (+17 more)
(+107 files in other folders)
