[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emulsim"
version = "9.0.0"
description = "Multi-scale simulation of polysaccharide microsphere preparation (emulsification + gelation + crosslinking + mechanical)"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
    "h5py>=3.10",
    "matplotlib>=3.8",
    "pydantic>=2.5",
]

[project.optional-dependencies]
optimization = ["botorch>=0.11", "gpytorch>=1.11", "torch>=2.1"]
interactive = ["plotly>=5.18", "jupyter"]
ui = ["streamlit>=1.30", "plotly>=5.18"]
dev = ["pytest>=7.4", "hypothesis>=6.90", "rich>=13.0", "numba>=0.59"]
all = ["emulsim[optimization,interactive,dev]"]

[project.scripts]
emulsim = "emulsim.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "smoke: minimum-viable end-to-end pipeline run via configs/fast_smoke.toml; must finish under 30s",
    "slow: tests that take >5s individually (CH 2D solver, Hypothesis property tests, full optimisation)",
]
